--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "@tsparticles/engine": "^3.8.1",
         "@tsparticles/react": "^3.0.0",
         "@tsparticles/slim": "^3.8.1",
+        "@types/recharts": "^1.8.29",
         "atmn": "^0.0.24",
         "autumn-js": "^0.1.34",
         "bcrypt": "^6.0.0",
@@ -57,9 +58,8 @@
         "cmdk": "^1.1.1",
         "cobe": "^0.6.4",
         "date-fns": "^4.1.0",
-        "dotted-map": "^2.2.3",
-        "drizzle-kit": "^0.31.4",
-        "drizzle-orm": "^0.44.5",
+        "drizzle-kit": "^0.22.8",
+        "drizzle-orm": "^0.44.7",
         "embla-carousel-auto-scroll": "^8.6.0",
         "embla-carousel-autoplay": "^8.6.0",
         "embla-carousel-react": "^8.6.0",
@@ -69,7 +69,6 @@
         "lucide-react": "^0.544.0",
         "mini-svg-data-uri": "^1.4.4",
         "motion": "^12.23.12",
-        "motion-dom": "^12.23.12",
         "next": "15.3.5",
         "next-themes": "^0.4.6",
         "qss": "^3.0.0",
@@ -84,9 +83,8 @@
         "react-resizable-panels": "^3.0.3",
         "react-responsive-masonry": "^2.7.1",
         "react-rough-notation": "^1.0.5",
-        "react-syntax-highlighter": "^15.6.1",
-        "react-wrap-balancer": "^1.1.1",
-        "recharts": "^3.0.2",
+        "react-syntax-highlighter": "^16.0.0",
+        "recharts": "^3.3.0",
         "simplex-noise": "^4.0.3",
         "sonner": "^2.0.6",
         "stripe": "^18.5.0",
@@ -100,14 +98,16 @@
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.3.1",
-        "@tailwindcss/postcss": "^4",
+        "@tailwindcss/postcss": "^4.0.0-alpha.13",
         "@types/node": "^20",
-        "@types/react": "^19",
-        "@types/react-dom": "^19",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
         "@types/react-syntax-highlighter": "^15.5.13",
         "@types/three": "^0.178.0",
-        "eslint": "^9.35.0",
-        "eslint-config-next": "^15.5.3",
+        "drizzle-kit": "^0.22.8",
+        "eslint": "^9.8.0",
+        "eslint-config-next": "15.0.0-rc.0",
+        "postcss": "^8",
         "tailwindcss": "^4",
         "tw-animate-css": "^1.3.8",
         "typescript": "^5"
